[package]
name = "cos-rust-sdk"
version = "0.1.0"
authors = ["raymon <raymon.guo@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
rust-crypto = "^0.2"
hex = "0.4"
dotenv = "0.15.0"
reqwest = "0.10.7"
tokio = {version = "0.2.22", features = ["macros"]}
anyhow = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
quick-xml = { version = "0.18.1", features = [ "serialize" ] }
serde-xml-rs = "0.4.0"
serde_derive = "1.0.114"
